<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#009688"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".Controler.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/logo_branca" />

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@android:color/background_light"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/login" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/common_action_bar_splitter"
        android:padding="16dp" />

    <EditText
        android:id="@+id/edit_text_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:textColor="@android:color/background_light"
        android:textColorHint="@color/common_action_bar_splitter"
        android:padding="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <Button
        android:padding="16dp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#009688"
        android:textSize="20dp"
        android:background="@android:color/background_light"
        android:onClick="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:padding="16dp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/cadastre_se"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20dp"
        android:background="@android:color/transparent"
        android:onClick="toLogin" />

</LinearLayout>