<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Controler.NovoPostoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBarNovoPosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:textAlignment="textStart"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:titleTextColor="@android:color/background_light">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/edit_text_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:padding="16dp"
                android:textColor="#009688"
                android:textColorHint="#80CBC4" />

            <EditText
                android:id="@+id/edit_text_bandeira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bandeira"
                android:padding="16dp"
                android:textColor="#009688"
                android:textColorHint="#80CBC4" />

            <EditText
                android:id="@+id/edit_text_gasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gasolina"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColor="#009688"
                android:textColorHint="#80CBC4" />


            <EditText
                android:id="@+id/edit_text_alcool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alcool"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColor="#009688"
                android:textColorHint="#80CBC4" />

            <EditText
                android:id="@+id/edit_text_diesel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diesel"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:textColor="#009688"
                android:textColorHint="#80CBC4" />

            <EditText
                android:id="@+id/edit_text_atendimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/atendimento"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="#009688"
                android:textColorHint="#80CBC4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="#009688"
                android:onClick="salvarPosto"
                android:padding="16dp"
                android:text="@string/salvar"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>